# meetAI

./: README.md  STATUS.md  WALKTHROUGH.md  overlay.html  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: overlay.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: autodetect.rs  mic.rs  mod.rs  system.rs  vad.rs
src-tauri/src/db/: mod.rs
src-tauri/src/kb/: chunker.rs  embed.rs  index.rs  mod.rs  search.rs  watcher.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/meeting/: jobs.rs  library.rs  mod.rs  session.rs
src-tauri/src/nudge/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src/components/: Sidebar.tsx
src/ipc/: index.ts
src/overlay/: Overlay.tsx  main.tsx
src/routes/: Chat.tsx  Library.tsx  LiveSession.tsx  Onboarding.tsx  PostMeeting.tsx  Settings.tsx
src/stores/: session.ts  settings.ts
