[package]
name = "meetai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "meetai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meetai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
fastembed = "4"
notify = "7"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
# M3: audio capture + live Whisper
cpal = "0.15"
hound = "3"
whisper-rs = "0.16"
uuid = { version = "1", features = ["v4"] }
# M9: logging
log = "0.4"
simplelog = "0.12"

